# CEX_Fintech

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: alembic.ini  config.py  database.py  exceptions.py  main.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2024_11_15_1453-9b31fa9443e0_initial_migration.py  2024_11_16_1620-bd728068571c_token_models.py  2024_11_16_1627-5dde0fe599a7_description_of_changes.py  2024_11_16_1635-7e5aad2456a0_add_uid_to_user.py  2024_11_16_1839-a2e1d3ba73d0_update_uid_column_to_varchar_12.py  2024_11_16_1900-639e2d8d0912_add_user_model_with_uid.py  2024_11_16_2204-aa50eb99459e_add_token_userasset_models.py  2024_11_16_2228-20ed6dfa5f89_add_token_userasset_models.py  (+26 more)
backend/app/crud/: exchange_wallet_crud.py  faucet_log_crud.py  order_crud.py  token_crud.py  trade_crud.py  trade_history_crud.py  transfer_crud.py  user_crud.py  user_wallet_crud.py
backend/app/models/: __init__.py  db_helper.py  exchange_wallet_model.py  faucet_log_model.py  order_model.py  token_model.py  trade_history_model.py  trade_model.py  transfer_model.py  user_model.py  user_wallet_model.py
backend/app/schemas/: exchange_wallet_scheme.py  faucet_claim_schema.py  order_scheme.py  token_scheme.py  trade_history_scheme.py  trade_scheme.py  transfer_scheme.py  user_scheme.py  user_wallet_scheme.py
backend/app/services/: auth_service.py  connection_manager.py  faucet_service.py  order_service.py  response_service.py  token_service.py  trade_service.py  transfer_service.py  wallet_service.py
(+59 files in other folders)
